--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: Li Yue
 description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
+url: https://lynn-xiaoe.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
