--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Li Yue
 description: A simple, beautiful, and powerful Jekyll theme for blogs
 url: https://lynn-xiaoe.github.io
-avatar: /avatar.jpeg
+avatar: /catttt.jpeg
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
