--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,43 @@ cover_image: /bg.jpeg
 
 
 
+# Gems
+plugins:
+  - jekyll-gist
+  - jekyll-paginate
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-sitemap
+
+# Optimize Jekyll
+exclude:
+  - .editorconfig
+  - .git
+  - .jekyll-cache
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE.md
+  - README.md
+  - scripts/
+  - not-pure-poole.gemspec
+
+# Optimize Jekyl SEO Tag
+twitter:
+  username: vszhub
+  card: summary
+logo: logo.png
+social:
+  name: Songzi Vong
+  links:
+    - https://twitter.com/vszhub
+    - https://github.com/vszhub
+google_site_verification: xxxxx
+lang: en
+
+sass:
+  sass_dir: _sass
+  style: :compressed
+
 # Options
 
 # Replace this value and uncomment to enable Google Analytics tracking
@@ -18,7 +55,7 @@ cover_image: /bg.jpeg
 # disqus: xxxxxx
 
 # Specify the author for blog posts
-#author:
-#  name: Songzi Vong
-#  url: https://github.com/vszhub/
-#  email: vszhub@gmail.com
+author:
+  name: Songzi Vong
+  url: https://github.com/vszhub/
+  email: vszhub@gmail.com
