--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Li Yue
-description: Homepage
+description: USTC
 url: https://lynn-xiaoe.github.io
 avatar: /catttt.jpeg
 paginate: 5
